[misc] Try to reduce memory requirement