@@ -23,7 +23,7 @@
 // @Library("XWiki@<branch, tag, sha1>") _
 // See https://github.com/jenkinsci/workflow-cps-global-lib-plugin for details.
 
-def globalMavenOpts = '-Xmx1536m -XX:MaxPermSize=512m -Xms256m'
+def globalMavenOpts = '-Xmx1024m -Xms256m'
 
 stage ('Commons Builds') {
   parallel(
